# cmoh

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Makefile.am  README.md  cmoh.pc.in  configure.ac
doc/: .gitignore  AccessorBundle.md  CMakeLists.txt  Factories.md  Installation.md  Introduction.md  Licensing.md  Motivation.md  Properties.md  README.md  Usage.md  Utilities.md  metadata.yaml
examples/: .gitignore  CMakeLists.txt  README.md  attributes_example.cpp  dynamic_key_example.cpp  person.cpp  person.hpp  string_key_example.cpp
include/cmoh/: accessor_bundle.hpp  attribute.hpp  char_traits.hpp  constructor.hpp  factory.hpp  method.hpp  optional.hpp  properties.hpp  selectable_items.hpp  string_utils.hpp  string_view.hpp  utils.hpp
include/cmoh/accessors/: method.hpp  utils.hpp
include/cmoh/accessors/attribute/: by_invocable.hpp  by_method.hpp  by_offset.hpp
include/cmoh/accessors/factory/: abstract_factory.hpp  constructor.hpp
test/: .gitignore  CMakeLists.txt  self_sufficiency.cpp.in
