#
# CORE INSTALLATION
#

# installation of the headers
#
# this is a bit cumbersome, since we cannot use nobase_ without having a
# Makefile.am in include/ --which we decided against.
cmohdir = $(includedir)/cmoh
cmoh_HEADERS = include/cmoh/*.hpp

cmoh_accessorsdir = $(cmohdir)/accessors/
cmoh_accessors_HEADERS = include/cmoh/accessors/*.hpp

cmoh_accessors_attributedir = $(cmohdir)/accessors/attribute/
cmoh_accessors_attribute_HEADERS = include/cmoh/accessors/attribute/*.hpp

cmoh_accessors_factorydir = $(cmohdir)/accessors/attribute/
cmoh_accessors_factory_HEADERS = include/cmoh/accessors/factory/*.hpp

